# theimposter.fun

./: .dockerignore  .gitignore  README.md  RULES.md  Tiltfile  docker-compose.yml  package-lock.json
backend/: .dockerignore  Cargo.toml  Dockerfile
backend/data/: README.md  locations.json  questions.json
backend/src/: main.rs
deploy/: release.sh
deploy/caddy/: Caddyfile  Dockerfile
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/src/: App.svelte  app.css
frontend/src/lib/: api.ts  router.ts  rules.ts  summary.ts
frontend/src/lib/components/: GuessDialog.svelte  LocationModal.svelte  RoleModal.svelte  ToastHost.svelte
frontend/src/lib/stores/: gameSession.ts
frontend/src/lib/views/: LandingView.svelte  LobbyView.svelte  RoundView.svelte  ScoreboardView.svelte
frontend/tests/: example.spec.ts  multiplayer.spec.ts
frontend/tests/helpers/: mockGameServer.ts
